# GTestSampleProject

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ClassToTest.h
tests/: CMakeLists.txt
tests/sample_tests/: CMakeLists.txt  SampleTestFixture.cpp
